--- a/cssお試し専用/homeアニメーション例1/home.css
+++ b/cssお試し専用/homeアニメーション例1/home.css
@@ -1,12 +1,19 @@
 body{
-    background: #00ced1;
-     color:white;
-    text-align: center;
+    width: 100%;
+    height: 600px;
+    background: linear-gradient(to left, rgba(101,200,208,1) 0%,
+					rgba(143,174,231,0.9)  10%,
+					rgba(189,115,255,0.5) 20%, 
+					rgba(101,200,208,0) 50%, 
+					rgba(255,69,218,0.5) 80%, 
+					rgba(255,168,218,0.9)  90%, 
+					rgba(255,247,69,1) 100%), url(sample03.jpg);
+	
 }
 
 header{
     top: 0;
-    height: 90px;
+    height: 80px;
     font-size: 35px;
     line-height: 90px;
     
@@ -24,35 +31,5 @@ footer{
     left: 0;
     width: 100%;
     background-color: black;
-    z-index:2;
-}
-
-main{
-    width:640px;
-    height:300px;
-    margin:0 auto;
-    top:90px;
-    
-}
-
-#slide {
-    position:relative;
-    top:74px;
-}
-#slide img {
-    position:absolute;
-    left:0;
-    top:0;
-}
-
-#grd{
-    position:absolute;
-    width:640px;
-    height:300px;
-    top:90px;
-    background: red;
-    z-index:1;
-    background: -moz-linear-gradient(left, #00ced1, rgba(0,206,209,0.3),rgba(0,206,209,0),rgba(0,206,209,0.3), #00ced1);
-    background: -webkit-linear-gradient(left, #00ced1, rgba(0,206,209,0.3),rgba(0,206,209,0),rgba(0,206,209,0.3), #00ced1);
-    background: linear-gradient(to right, #00ced1, rgba(0,206,209,0.3),rgba(0,206,209,0),rgba(0,206,209,0.3), #00ced1);
+    z-index:5;
 }
